--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #DBE4EF;
-    --card-front-color: #black;
-    --card-back-color: #silver;
+    --card-front-color: #1F8B4C;
+    --card-back-color: #36393F;
 }
 
 body {
